--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
 	"workbench.colorCustomizations": {
-		"statusBar.noFolderBackground": "#f2f4f7"
+		"statusBar.noFolderBackground": "#f2f4f7",
+		"statusBar.debuggingBackground": "#f2f4f7",
+		"activityBar.background": "#f2f4f7",
+		"activityBar.foreground": "#222222"
 	}
 }
